# SQLJobScheduler

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.sh
.github/: dependabot.yml
.github/workflows/: build.yml  deploy-docs.yml
01_installation/: index.html
02_api_usage/: index.html
03_jobrunner/: index.html
04_joblister/: index.html
ServerService/: start_jobrunner.sh  zshHist4jobrunner  zshrc4jobrunner
ServerService/templates/: app_settings.json  service_template.txt  sh_template.txt  template4JobLister  template4_start_jobrunner  template4jpuJobRunner
docs/: 01_installation.md  02_api_usage.md  03_jobrunner.md  04_joblister.md  index.md
frontend/src/: App.tsx  theme.ts
frontend/src/components/: GPUStatus.tsx  JobsTable.tsx  Layout.tsx
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
frontend4JL/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend4JL/src/: App.tsx  main.tsx
frontend4JL/src/components/: CurrentJob.tsx  GPUStatus.tsx  JobRunnerLog.tsx  JobsTable.tsx
frontend4JL/src/config/: layout.tsx  theme.ts
frontend4JL/src/services/: fetchData_utils.ts  removeLogs.ts
frontend4JL/src/types/: index.ts
frontend4JL/src/utils/: text_formatting.ts
search/: search_index.json
src/sqljobscheduler/: EmailNotifier.py  JobLister.py  JobListerDashboard.py  JobLister_fastapi.py  JobLister_streamlit.py  JobManager.py  JobRunner.py  LockFileUtils.py  SetupSQLJS.py  __init__.py  configSetup.py  setup_cli.py  toggleRunner.py
